--- a/Fiver.Asp.Logging.Serilog/Fiver.Asp.Logging.Serilog.csproj
+++ b/Fiver.Asp.Logging.Serilog/Fiver.Asp.Logging.Serilog.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.0.0-dev-00002" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.0" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="3.3.3" />
